Fix tooltips in dark mode

--- a/_includes/amigavision.css
+++ b/_includes/amigavision.css
@@ -800,6 +800,9 @@ font-weight: 600;
   pre, code {
     background-color: #222;
   }
+  .littlefoot {
+    color: black;
+  }
 }
 
 
